<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.microboxlabs.miot</groupId>
    <artifactId>miot-parent</artifactId>
    <version>0.5.16</version>
    <packaging>pom</packaging>

    <name>ModularIoT — Parent</name>
    <description>ModularIoT modular monorepo: single image, runtime-activated components</description>

    <modules>
        <module>miot-gps-model</module>
        <module>miot-core</module>
        <module>miot-resource-core</module>
        <module>miot-integrations</module>
        <module>miot-conversational</module>
        <module>miot-fleet</module>
        <module>miot-driver</module>
        <module>miot-tracking</module>
        <module>miot-gateway</module>
        <module>miot-cli</module>
    </modules>

    <properties>
        <argLine></argLine>
        <compiler-plugin.version>3.15.0</compiler-plugin.version>
        <maven.compiler.release>21</maven.compiler.release>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
        <quarkus.platform.artifact-id>quarkus-bom</quarkus.platform.artifact-id>
        <quarkus.platform.group-id>io.quarkus.platform</quarkus.platform.group-id>
        <quarkus.platform.version>3.32.4</quarkus.platform.version>
        <skipITs>true</skipITs>
        <surefire-plugin.version>3.5.4</surefire-plugin.version>
    </properties>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>${quarkus.platform.group-id}</groupId>
                <artifactId>${quarkus.platform.artifact-id}</artifactId>
                <version>${quarkus.platform.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
            <!-- Internal modules -->
            <dependency>
                <groupId>com.microboxlabs.miot</groupId>
                <artifactId>miot-core</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.microboxlabs.miot</groupId>
                <artifactId>miot-fleet</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.microboxlabs.miot</groupId>
                <artifactId>miot-resource-core</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.microboxlabs.miot</groupId>
                <artifactId>miot-integrations</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.microboxlabs.miot</groupId>
                <artifactId>miot-conversational</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.microboxlabs.miot</groupId>
                <artifactId>miot-driver</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.microboxlabs.miot</groupId>
                <artifactId>miot-tracking</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.microboxlabs.miot</groupId>
                <artifactId>miot-gateway</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.microboxlabs.miot</groupId>
                <artifactId>miot-gps-model</artifactId>
                <version>${project.version}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>${compiler-plugin.version}</version>
                    <configuration>
                        <parameters>true</parameters>
                    </configuration>
                </plugin>
                <plugin>
                    <artifactId>maven-surefire-plugin</artifactId>
                    <version>${surefire-plugin.version}</version>
                    <configuration>
                        <argLine>@{argLine}</argLine>
                        <systemPropertyVariables>
                            <java.util.logging.manager>org.jboss.logmanager.LogManager</java.util.logging.manager>
                            <maven.home>${maven.home}</maven.home>
                        </systemPropertyVariables>
                    </configuration>
                </plugin>
                <plugin>
                    <artifactId>maven-failsafe-plugin</artifactId>
                    <version>${surefire-plugin.version}</version>
                    <executions>
                        <execution>
                            <goals>
                                <goal>integration-test</goal>
                                <goal>verify</goal>
                            </goals>
                        </execution>
                    </executions>
                    <configuration>
                        <argLine>@{argLine}</argLine>
                        <systemPropertyVariables>
                            <java.util.logging.manager>org.jboss.logmanager.LogManager</java.util.logging.manager>
                            <maven.home>${maven.home}</maven.home>
                        </systemPropertyVariables>
                    </configuration>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>

    <profiles>
        <profile>
            <id>native</id>
            <activation>
                <property>
                    <name>native</name>
                </property>
            </activation>
            <properties>
                <quarkus.package.jar.enabled>false</quarkus.package.jar.enabled>
                <skipITs>false</skipITs>
                <quarkus.native.enabled>true</quarkus.native.enabled>
            </properties>
        </profile>
    </profiles>
</project>
